--- a/rake_sandbox/Rakefile
+++ b/rake_sandbox/Rakefile
@@ -1,20 +1,7 @@
-
+require 'colorize'
 task default: :instrustions
-
-task :instrustions do
-  require 'colorize'
-  user        = `whoami`.strip.capitalize.light_red
-  current_dir = `basename $(pwd)`.strip.yellow
-  puts "Welcome #{user} to the #{current_dir} directory"
-  puts "This is the instrustions task".red
-  puts <<~HEREDOC
-
-    Getting started
-
-    rake install                  # Install dependencies
-    rake lint                     # Run linter
-  HEREDOC
-end
+USER = `whoami`.strip
+CURRENT_DIR = `basename $(pwd)`.strip
 
 task :install do
   sh "bundle install"
@@ -22,4 +9,16 @@ end
 
 task :lint do
   sh "bundle exec rubocop -a"
+end
+
+task :instrustions do
+  require 'colorize'
+  puts "Hi #{USER.green}! Welcome to #{CURRENT_DIR.red}" + " POWERED BY RAKE".yellow
+  puts <<~HEREDOC
+
+    Getting started
+
+    rake install                  # Install dependencies
+    rake lint                     # Run linter
+  HEREDOC
 end
