--- a/active_model/Gemfile
+++ b/active_model/Gemfile
@@ -1,5 +1,7 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "activemodel"
+gem 'activemodel'
+
+gem 'colorize'
