--- a/active_model/Gemfile
+++ b/active_model/Gemfile
@@ -2,6 +2,7 @@
 
 source 'https://rubygems.org'
 
-gem 'activemodel'
-
 gem 'colorize'
+
+gem 'activemodel'
+gem 'bcrypt' # fo ActiveModel::SecurePassword
