--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /test/version_tmp/
 /tmp/
 /active_record/db/*
+/action_mailer/tmp/*
 
 # Used by dotenv library to load environment variables.
 # .env
