Add Rakefile, lint

--- a/rack_sandbox/Rakefile
+++ b/rack_sandbox/Rakefile
@@ -1,7 +1,10 @@
 
-task default: :install
+task default: :rackup
 
 task :install do
   sh "gem install rackup"
+end
+
+task :rackup do
   sh "rackup"
 end
